[demo] quick home / about page do-over

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
-        "title": "Welcome, Java Hipster!",
-        "subtitle": "This is your homepage",
+        "title": "Welcome!",
+        "subtitle": "Your dream furniture from IKEA&reg; is just a few clicks away!",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
