--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -120,5 +120,5 @@
         "emailexists": "E-mail is already in use!",
         "idexists": "A new {{ entityName }} cannot already have an ID"
     },
-    "footer": "IKEA is a registered trademark of inter IKEA systems b.v. and is in no way affiliated with via logistics llc"
+    "footer": "IKEA&reg; is a registered trademark of Inter IKEA Systems B.V. and is in no way affiliated with Via Logistics LLC."
 }
